--- a/package.json
+++ b/package.json
@@ -12,35 +12,43 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
-    "bootstrap": "^4.0.0",
-    "core-js": "^2.4.1",
-    "crypto-js": "^3.1.9-1",
-    "font-awesome": "^4.7.0",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "@agm/core": "1.0.0-beta.3",
+    "@angular/animations": "6.1.0",
+    "@angular/common": "6.1.0",
+    "@angular/compiler": "6.1.0",
+    "@angular/core": "6.1.0",
+    "@angular/elements": "6.1.0",
+    "@angular/forms": "6.1.0",
+    "@angular/http": "6.1.0",
+    "@angular/platform-browser": "6.1.0",
+    "@angular/platform-browser-dynamic": "6.1.0",
+    "@angular/router": "6.1.0",
+    "@candifood/core": "0.0.20",
+    "@fortawesome/angular-fontawesome": "0.1.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.2",
+    "@fortawesome/free-brands-svg-icons": "5.2.0",
+    "@fortawesome/free-regular-svg-icons": "5.2.0",
+    "@fortawesome/free-solid-svg-icons": "5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "3.0.0-beta.1",
+    "@ng-bootstrap/schematics": "2.0.0-alpha.1",
+    "bootstrap": "4.1.3",
+    "core-js": "2.5.7",
+    "crypto-js": "3.1.9-1",
+    "rxjs": "6.2.2",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.0-beta.2",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "6.1.2",
+    "@angular/compiler-cli": "6.1.0",
+    "@angular/language-service": "6.1.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
@@ -48,6 +56,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "2.9.2"
   }
 }
