--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.0.0-beta.3",
+    "@agm/core": "1.1.0",
     "@angular/animations": "6.1.0",
     "@angular/common": "6.1.0",
     "@angular/compiler": "6.1.0",
@@ -29,33 +29,33 @@
     "@fortawesome/free-brands-svg-icons": "5.2.0",
     "@fortawesome/free-regular-svg-icons": "5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "3.0.0-beta.1",
+    "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ng-bootstrap/schematics": "2.0.0-alpha.1",
-    "bootstrap": "4.1.3",
-    "core-js": "2.5.7",
-    "crypto-js": "3.1.9-1",
-    "rxjs": "6.2.2",
-    "zone.js": "^0.8.26"
+    "bootstrap": "5.0.0",
+    "core-js": "3.12.1",
+    "crypto-js": "4.0.0",
+    "rxjs": "6.6.7",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "6.1.2",
     "@angular/compiler-cli": "6.1.0",
     "@angular/language-service": "6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "@types/jasmine": "3.7.2",
+    "@types/jasminewd2": "2.0.9",
+    "@types/node": "15.0.2",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "3.7.1",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.2",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.6.0",
+    "protractor": "7.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "2.9.2"
   }
 }
