--- a/package.json
+++ b/package.json
@@ -1,61 +1,49 @@
 {
-  "name": "aniruddhadas9gitpage",
+  "name": "aniruddhadas9",
   "version": "0.0.0",
-  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod --output-hashing none",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@agm/core": "1.1.0",
-    "@angular/animations": "6.1.0",
-    "@angular/common": "6.1.0",
-    "@angular/compiler": "6.1.0",
-    "@angular/core": "6.1.0",
-    "@angular/elements": "6.1.0",
-    "@angular/forms": "6.1.0",
-    "@angular/http": "6.1.0",
-    "@angular/platform-browser": "6.1.0",
-    "@angular/platform-browser-dynamic": "6.1.0",
-    "@angular/router": "6.1.0",
-    "@candifood/core": "0.0.20",
-    "@fortawesome/angular-fontawesome": "0.1.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.2",
-    "@fortawesome/free-brands-svg-icons": "5.2.0",
-    "@fortawesome/free-regular-svg-icons": "5.2.0",
-    "@fortawesome/free-solid-svg-icons": "5.2.0",
-    "@ng-bootstrap/ng-bootstrap": "9.1.0",
-    "@ng-bootstrap/schematics": "2.0.0-alpha.1",
-    "bootstrap": "5.0.0",
-    "core-js": "3.12.1",
+    "@angular/animations": "12.0.0",
+    "@angular/common": "12.0.0",
+    "@angular/compiler": "12.0.0",
+    "@angular/core": "12.0.0",
+    "@angular/forms": "12.0.0",
+    "@angular/platform-browser": "12.0.0",
+    "@angular/platform-browser-dynamic": "12.0.0",
+    "@angular/router": "12.0.0",
+    "@candypal/website": "0.0.2",
+    "@fortawesome/angular-fontawesome": "0.9.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-brands-svg-icons": "5.15.3",
+    "@fortawesome/free-regular-svg-icons": "5.15.3",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "9.1.1",
+    "bootstrap": "5.0.1",
     "crypto-js": "4.0.0",
     "rxjs": "6.6.7",
+    "tslib": "2.2.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "6.1.2",
-    "@angular/compiler-cli": "6.1.0",
-    "@angular/language-service": "6.1.0",
+    "@angular-devkit/build-angular": "12.0.0",
+    "@angular/cli": "12.0.0",
+    "@angular/compiler-cli": "12.0.0",
     "@types/jasmine": "3.7.2",
-    "@types/jasminewd2": "2.0.9",
-    "@types/node": "15.0.2",
-    "codelyzer": "6.0.2",
+    "@types/node": "15.0.3",
     "jasmine-core": "3.7.1",
-    "jasmine-spec-reporter": "7.0.0",
     "karma": "6.3.2",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-coverage": "2.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.6.0",
-    "protractor": "7.0.0",
-    "ts-node": "9.1.1",
-    "tslint": "6.1.3",
-    "typescript": "2.9.2"
+    "typescript": "4.2.4"
   }
 }
