--- a/source/package.json
+++ b/source/package.json
@@ -1,11 +1,11 @@
 {
   "name": "aniruddhadas9",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "move": "mv  -v dist/aniruddhadas9/* ../",
-    "build": "ng build",
+    "build": "ng build && npm run move",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,30 +21,30 @@
     "@angular/platform-browser-dynamic": "13.3.0",
     "@angular/router": "13.3.0",
     "@candypal/website": "0.0.2",
-    "@fortawesome/angular-fontawesome": "0.9.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-brands-svg-icons": "5.15.3",
-    "@fortawesome/free-regular-svg-icons": "5.15.3",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
-    "@ng-bootstrap/ng-bootstrap": "9.1.1",
-    "bootstrap": "5.0.1",
-    "crypto-js": "4.0.0",
+    "@fortawesome/angular-fontawesome": "0.10.2",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-brands-svg-icons": "6.1.1",
+    "@fortawesome/free-regular-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "bootstrap": "5.1.3",
+    "crypto-js": "4.1.1",
     "rxjs": "6.6.7",
-    "tslib": "2.2.0",
-    "zone.js": "0.11.4"
+    "tslib": "2.3.1",
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.3.0",
     "@angular/cli": "13.3.0",
     "@angular/compiler-cli": "13.3.0",
-    "@types/jasmine": "3.7.2",
-    "@types/node": "15.0.3",
-    "jasmine-core": "3.7.1",
-    "karma": "6.3.2",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.6.0",
+    "@types/jasmine": "4.0.1",
+    "@types/node": "17.0.23",
+    "jasmine-core": "4.0.1",
+    "karma": "6.3.17",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-coverage": "2.2.0",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
     "typescript": "4.6.3"
   }
 }
