--- a/source/package.json
+++ b/source/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.1.0",
     "@angular/animations": "13.3.0",
     "@angular/common": "13.3.0",
     "@angular/compiler": "13.3.0",
@@ -20,7 +19,7 @@
     "@angular/platform-browser": "13.3.0",
     "@angular/platform-browser-dynamic": "13.3.0",
     "@angular/router": "13.3.0",
-    "@candypal/website": "0.0.2",
+    "@candypal/website": "0.0.5",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
@@ -28,8 +27,10 @@
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "bootstrap": "5.1.3",
+    "primeicons": "5.0.0",
+    "primeng": "13.3.2",
     "crypto-js": "4.1.1",
-    "rxjs": "6.6.7",
+    "rxjs": "7.5.5",
     "tslib": "2.3.1",
     "zone.js": "0.11.5"
   },
