--- a/source/package.json
+++ b/source/package.json
@@ -26,10 +26,11 @@
     "@fortawesome/free-regular-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ngx-translate/core": "14.0.0",
     "bootstrap": "5.1.3",
+    "crypto-js": "4.1.1",
     "primeicons": "5.0.0",
     "primeng": "13.3.2",
-    "crypto-js": "4.1.1",
     "rxjs": "7.5.5",
     "tslib": "2.3.1",
     "zone.js": "0.11.5"
