--- a/source/package.json
+++ b/source/package.json
@@ -11,42 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.0",
-    "@angular/common": "14.0.0",
-    "@angular/compiler": "14.0.0",
-    "@angular/core": "14.0.0",
-    "@angular/forms": "14.0.0",
-    "@angular/platform-browser": "14.0.0",
-    "@angular/platform-browser-dynamic": "14.0.0",
-    "@angular/router": "14.0.0",
+    "@angular/animations": "15.0.2",
+    "@angular/common": "15.0.2",
+    "@angular/compiler": "15.0.2",
+    "@angular/core": "15.0.2",
+    "@angular/forms": "15.0.2",
+    "@angular/platform-browser": "15.0.2",
+    "@angular/platform-browser-dynamic": "15.0.2",
+    "@angular/router": "15.0.2",
     "@candypal/website": "0.0.7",
-    "@fortawesome/angular-fontawesome": "0.10.2",
-    "@fortawesome/fontawesome-svg-core": "6.1.1",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
-    "@fortawesome/free-regular-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@fortawesome/angular-fontawesome": "0.12.0",
+    "@fortawesome/fontawesome-svg-core": "6.2.1",
+    "@fortawesome/free-brands-svg-icons": "6.2.1",
+    "@fortawesome/free-regular-svg-icons": "6.2.1",
+    "@fortawesome/free-solid-svg-icons": "6.2.1",
+    "@ng-bootstrap/ng-bootstrap": "14.0.0",
     "@ngx-translate/core": "14.0.0",
-    "bootstrap": "5.1.3",
+    "bootstrap": "5.2.3",
     "crypto-js": "4.1.1",
-    "primeicons": "5.0.0",
-    "primeng": "13.3.2",
-    "rxjs": "7.5.5",
-    "tslib": "2.3.1",
+    "primeicons": "6.0.1",
+    "primeng": "15.0.0-rc.1",
+    "rxjs": "7.6.0",
+    "tslib": "2.4.1",
     "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.0",
-    "@angular/cli": "14.0.0",
-    "@angular/compiler-cli": "14.0.0",
-    "@types/jasmine": "4.0.1",
+    "@angular-devkit/build-angular": "15.0.2",
+    "@angular/cli": "15.0.2",
+    "@angular/compiler-cli": "15.0.2",
+    "@types/jasmine": "4.3.1",
     "@types/node": "17.0.23",
-    "jasmine-core": "4.0.1",
-    "karma": "6.3.17",
+    "jasmine-core": "4.5.0",
+    "karma": "6.4.1",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.0",
-    "karma-jasmine": "4.0.2",
-    "karma-jasmine-html-reporter": "1.7.0",
-    "typescript": "4.6.3"
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "typescript": "4.8.4"
   }
 }
